--- a/Benday.BuildUtilities.Core/src/Benday.BuildUtilities.Core.Api/Benday.BuildUtilities.Core.Api.csproj
+++ b/Benday.BuildUtilities.Core/src/Benday.BuildUtilities.Core.Api/Benday.BuildUtilities.Core.Api.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFrameworks>netcoreapp1.0;netcoreapp1.1;netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
