Fixed a half-zillion warnings from tslint. Fixed Promise compilation problems for all the index.ts files. Updated create-vsix.bat script to deal with the latest version of tsc bombing out when being called from script. Added new task 'setjsonvalue'.

--- a/Benday.BuildTasks/setjsonvalue/package.json
+++ b/Benday.BuildTasks/setjsonvalue/package.json
@@ -9,8 +9,8 @@
   "author": "bendayconsulting",
   "license": "ISC",
   "dependencies": {
-    "@types/es6-promise": "^3.3.0",
     "path": "^0.12.7",
+    "typings": "^2.1.1",
     "vsts-task-lib": "^2.2.1"
   },
   "devDependencies": {
