--- a/Benday.BuildUtilities.Core/src/Benday.BuildUtilities.Core.ConsoleUi/Benday.BuildUtilities.Core.ConsoleUi.csproj
+++ b/Benday.BuildUtilities.Core/src/Benday.BuildUtilities.Core.ConsoleUi/Benday.BuildUtilities.Core.ConsoleUi.csproj
@@ -1,11 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp1.0;netcoreapp1.1;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.2</TargetFrameworks>
     <AssemblyName>BendayBuildConfigUtilCore</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
     <PackageReference Include="System.Xml.XPath" Version="4.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
   </ItemGroup>
 </Project>
