--- a/Benday.BuildTasks/setjsonconfigconnectionstring/package.json
+++ b/Benday.BuildTasks/setjsonconfigconnectionstring/package.json
@@ -9,12 +9,12 @@
   "author": "bendayconsulting",
   "license": "ISC",
   "dependencies": {
+    "http-proxy-agent": "^2.1.0",
     "path": "^0.12.7",
-    "typings": "^2.1.1",
     "vsts-task-lib": "^2.2.1"
   },
   "devDependencies": {
-    "@types/node": "^8.9.4",
-    "@types/q": "^1.0.7"
+    "@types/node": "^8.10.49",
+    "@types/q": "^1.5.2"
   }
 }
