--- a/Benday.BuildTasks/setappconfigappsetting/BendayBuildConfigUtilCore.runtimeconfig.json
+++ b/Benday.BuildTasks/setappconfigappsetting/BendayBuildConfigUtilCore.runtimeconfig.json
@@ -1,9 +1,9 @@
 {
   "runtimeOptions": {
-    "tfm": "netcoreapp2.2",
+    "tfm": "netcoreapp3.1",
     "framework": {
-      "name": "Microsoft.AspNetCore.App",
-      "version": "2.2.0"
+      "name": "Microsoft.NETCore.App",
+      "version": "3.1.0"
     }
   }
 }
