--- a/Benday.BuildTasks/setappconfigconnectionstring/package.json
+++ b/Benday.BuildTasks/setappconfigconnectionstring/package.json
@@ -10,11 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/es6-promise": "^3.3.0",
-    "path": "^0.12.7",
-    "vsts-task-lib": "^2.2.1"
+    "azure-pipelines-task-lib": "^2.9.6",
+    "path": "^0.12.7"
   },
   "devDependencies": {
-    "@types/node": "^8.10.58",
-    "@types/q": "^1.5.2"
+    "@types/node": "^8.10.61",
+    "@types/q": "^1.5.4"
   }
 }
