--- a/Benday.BuildTasks/setjsonconfigconnectionstring/package.json
+++ b/Benday.BuildTasks/setjsonconfigconnectionstring/package.json
@@ -9,13 +9,12 @@
   "author": "bendayconsulting",
   "license": "ISC",
   "dependencies": {
-    "azure-pipelines-task-lib": "^2.9.3",
+    "azure-pipelines-task-lib": "^2.9.6",
     "http-proxy-agent": "^2.1.0",
-    "path": "^0.12.7",
-    "vsts-task-lib": "^2.2.1"
+    "path": "^0.12.7"
   },
   "devDependencies": {
-    "@types/node": "^8.10.58",
-    "@types/q": "^1.5.2"
+    "@types/node": "^8.10.61",
+    "@types/q": "^1.5.4"
   }
 }
