--- a/Benday.BuildTasks/setjsonvalue/package.json
+++ b/Benday.BuildTasks/setjsonvalue/package.json
@@ -9,11 +9,11 @@
   "author": "bendayconsulting",
   "license": "ISC",
   "dependencies": {
-    "path": "^0.12.7",
-    "vsts-task-lib": "^2.2.1"
+    "azure-pipelines-task-lib": "^2.9.6",
+    "path": "^0.12.7"
   },
   "devDependencies": {
-    "@types/node": "^8.10.58",
-    "@types/q": "^1.5.2"
+    "@types/node": "^8.10.61",
+    "@types/q": "^1.5.4"
   }
 }
