--- a/Benday.BuildTasks/package.json
+++ b/Benday.BuildTasks/package.json
@@ -9,8 +9,9 @@
   "author": "bendayconsulting",
   "license": "ISC",
   "devDependencies": {
+    "tslint": "^6.1.3",
     "typescript": "^2.9.2",
-    "vsts-task-lib": "^2.2.1"
+    "azure-pipelines-task-lib": "^3.1.10"
   },
   "repository": {
     "type": "git",
@@ -20,9 +21,5 @@
   "bugs": {
     "url": "https://github.com/benday/build-utilities/issues",
     "email": "info@benday.com"
-  },
-  "dependencies": {
-    "tfx-cli": "^0.7.6",
-    "tslint": "^5.18.0"
   }
 }
