--- a/Benday.BuildTasks/setjsonconfigconnectionstring/package.json
+++ b/Benday.BuildTasks/setjsonconfigconnectionstring/package.json
@@ -9,16 +9,14 @@
   "author": "bendayconsulting",
   "license": "ISC",
   "dependencies": {
-    "azure-pipelines-task-lib": "^3.1.7",
-    "http-proxy-agent": "^2.1.0",
-    "path": "^0.12.7",
-    "@types/node": "^10.17.0",
     "@types/mocha": "^5.2.7",
-    "@types/uuid": "^8.3.0"
+    "@types/uuid": "^8.3.3",
+    "azure-pipelines-task-lib": "^3.1.10",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@types/node": "^8.10.66",
+    "@types/node": "^10.17.0",
     "@types/q": "^1.5.5",
-    "typescript": "^4.0.0"
+    "typescript": "^4.5.2"
   }
 }
