--- a/BendayTypescriptTesting/BendayTypescriptTesting/package.json
+++ b/BendayTypescriptTesting/BendayTypescriptTesting/package.json
@@ -13,13 +13,15 @@
   "devDependencies": {
     "@types/node": "^8.10.58",
     "jasmine": "^3.5.0",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "^3.1.0",
+    "jasmine-core": "^4.0.1",
+    "karma": "^6.3.17",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-jasmine": "^2.0.1",
+    "karma-typescript": "^5.5.3",
     "typescript": "^3.2.2"
   },
   "dependencies": {
-    "@types/jest": "^24.0.21",
-    "gulp": "^4.0.2"
+    "@types/jest": "^24.0.21"
+    
   }
 }
