--- a/typescript-development/package.json
+++ b/typescript-development/package.json
@@ -18,6 +18,8 @@
     "karma": "^6.4.3",
     "karma-chrome-launcher": "^3.2.0",
     "karma-jasmine": "^5.1.0",
-    "karma-typescript": "^5.5.4"
+    "karma-typescript": "^5.5.4",
+    "source-map-loader": "^5.0.0",
+    "typescript": "^5.4.5"
   }
 }
