--- a/Benday.BuildTasks/package.json
+++ b/Benday.BuildTasks/package.json
@@ -9,9 +9,9 @@
   "author": "bendayconsulting",
   "license": "ISC",
   "devDependencies": {
+    "azure-pipelines-task-lib": "^4.17.3",
     "tslint": "^6.1.3",
-    "typescript": "^2.9.2",
-    "azure-pipelines-task-lib": "^3.1.10"
+    "typescript": "^2.9.2"
   },
   "repository": {
     "type": "git",
