--- a/Benday.BuildUtilities.Core/src/Benday.BuildUtilities.Core.ConsoleUi/Benday.BuildUtilities.Core.ConsoleUi.csproj
+++ b/Benday.BuildUtilities.Core/src/Benday.BuildUtilities.Core.ConsoleUi/Benday.BuildUtilities.Core.ConsoleUi.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <AssemblyName>BendayBuildConfigUtilCore</AssemblyName>
   </PropertyGroup>
   <PropertyGroup>
     <PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <!--<PackageReference Include="System.Data.SqlClient" Version="4.9.0" />-->
   </ItemGroup>
 </Project>
