--- a/Benday.BuildTasks/deployefcoremigrations/ef.runtimeconfig.json
+++ b/Benday.BuildTasks/deployefcoremigrations/ef.runtimeconfig.json
@@ -1,13 +1,14 @@
 {
   "runtimeOptions": {
-    "tfm": "netcoreapp2.0",
+    "tfm": "net8.0",
     "rollForward": "Major",
     "framework": {
       "name": "Microsoft.NETCore.App",
-      "version": "2.0.0"
+      "version": "8.0.0"
     },
     "configProperties": {
-      "System.Reflection.Metadata.MetadataUpdater.IsSupported": false
+      "System.Reflection.Metadata.MetadataUpdater.IsSupported": false,
+      "System.Runtime.Serialization.EnableUnsafeBinaryFormatterSerialization": false
     }
   }
 }
